# HighPrecPosSens

./: .gitignore  Blockschaltbild.graphml  README.md
CAD/: s12443.asm  s12443.cfg  s12443.par  s12443.stp  s12443_pads.par
Documentation/: PCB Checklist.txt  SLA.txt  Stromplanung.xlsx  read.me
Firmware/: read.me
Firmware/PIOReadTest/: SW_Blocks.graphml
Firmware/VideoTest/: VideoTest.ino
Firmware/dma_capture/: CMakeLists.txt  cmake_install.cmake  serialReadout.py
Firmware/dma_capture/code/: CMakeLists.txt  barcodegenerator.py  brujin.py  calibrationfile.py  dma_capture.c  resistor_dac.pio  serialReadout.py
PCB/: HighPrecPosSens.kicad_pcb  HighPrecPosSens.kicad_prl  HighPrecPosSens.kicad_pro  HighPrecPosSens.kicad_sch  fp-lib-table  sym-lib-table
PCB/HighPrecPosSensDev/: COMPOUND.par  C_0603_1608Metric.asm  C_0805_2012Metric.asm  C_1206_3216Metric.asm  D_SMC.asm  Deckel.par  Deckel.stl  Deckel2.stl  HighPrecPosSens-all-pos.csv  HighPrecPosSens.asm  HighPrecPosSens.cfg  HighPrecPosSens.kicad_pcb  HighPrecPosSens.kicad_prl  HighPrecPosSens.kicad_sch  JST_XH_B6B-XH-A_1x06_P2.50mm_Vertical.asm  LED_0603_1608Metric.asm  PinHeader_1x02_P2.54mm_Vertical.asm  R_0603_1608Metric.asm  SOIC-8_3.9x4.9mm_P1.27mm.asm  SOLID.par  SOLID_0.par  SOLID_1.par  SOLID_2.par  SOLID_3.par  SOLID_4.par  SOLID_5.par  SOLID_6.par  SOLID_7.par  SOLID_8.par  SOLID_9.par  TI_SO-PowerPAD-8.asm  TSSOP-20_4.4x6.5mm_P0.65mm.asm  fp-lib-table  s12443.asm
PCB/HighPrecPosSensMinimal/: HighPrecPosSens.kicad_prl  HighPrecPosSens.kicad_pro  (+1 more)
Simulation/: Comparator 2 bit ADC.asc  LM393Test.asc
(+53 files in other folders)
